--- a/MaconCO/MaconCoders/templates/MaconCoders/index.html
+++ b/MaconCO/MaconCoders/templates/MaconCoders/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="{% static  'css/styles.css' %}" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>  
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 </head>
 <body>  
@@ -262,48 +262,44 @@
         <h2
           class="mb-4 text-2xl leading-tight md:text-3xl md:leading-tight lg:text-6xl lg:leading-tight font-bold text-black uppercase">Current projects</h2>
       
-     <div class="mx-auto  w-20 mb-4  border-b-8 border-[#df1683] "></div> 
+      <div class="mx-auto  w-20 mb-4  border-b-8 border-[#df1683] "></div> 
         <p class="mb-9 text-lg lg:text-2xl leading-loose lg:leading-loose text-gray-500">
-          These projects have are in development or have been recently pithed to Macon Code. If you are interested in any of these projects and would like to contribute, contact us!
+         Test These projects have are in development or have been recently pithed to. If you are interested in any of these projects and would like to contribute, contact us!
       </p>
-    </div> 
-
-
-  <div class="relative py-24 lg:py-32 bg-base-200  overflow-hidden" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-
-    <button 
-    x-data="{ open: false }"
-    @mouseenter="open = true"
-    @mouseleave="open = false"  
-    type="button" class="flex absolute top-0 left-0 justify-center items-center  px-4 h-full cursor-pointer group focus:outline-none slide-control left" data-carousel-prev>
+      </div> 
+      
+      
+      <div class="relative py-24 lg:py-32 bg-base-200  overflow-hidden" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
+      
+      <button type="button" class="flex absolute top-0 left-0 justify-center items-center  px-4 h-full cursor-pointer group focus:outline-none slide-control left" data-carousel-prev>
       
       <span class="inline-flex justify-center items-center w-8 h-10 rounded-full sm:w-20 sm:h-20 bg-stone-500/40 dark:bg-gray-800/30 group-hover:bg-stone-600/50   group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
         <svg class="w-8 h-8 text-white sm:w-18 sm:h-20 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
-          <span class="hidden">Previous</span>
+          <span class="hidden">Previous</span>   
       </span>
-  </button>
-
-
-  <button type="button"   class="flex absolute top-0 right-0 z-30 justify-center items-center   px-4 h-full cursor-pointer group focus:outline-none slide-control right " data-carousel-next>
-
-    <span class="inline-flex justify-center items-center w-8 h-10 rounded-full  sm:w-20 sm:h-20 bg-stone-500/40 dark:bg-gray-800/30 group-hover:bg-stone-600/50  group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
+      </button>
+      
+      
+      <button type="button"   class="flex absolute top-0 right-0 z-30 justify-center items-center   px-4 h-full cursor-pointer group focus:outline-none slide-control right " data-carousel-next>
+      
+      <span class="inline-flex justify-center items-center w-8 h-10 rounded-full  sm:w-20 sm:h-20 bg-stone-500/40 dark:bg-gray-800/30 group-hover:bg-stone-600/50  group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
       <svg class="w-8 h-8 text-white  sm:w-18 sm:h-20 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
-
- 
-
+      
+      
+      
           <span class="hidden">Next</span>
       </span>
-  </button>
-    <!-- <div class="max-w-xl lg:max-w-5xl mx-auto text-center">
+      </button>
+      <!-- <div class="max-w-xl lg:max-w-5xl mx-auto text-center">
       <h2
         class="mb-4 text-2xl leading-tight md:text-3xl md:leading-tight lg:text-6xl lg:leading-tight font-bold text-black uppercase">Current projects</h2>
-    
-   <div class="mx-auto  w-20  border-b-8 border-indigo-500 "></div> 
+      
+      <div class="mx-auto  w-20  border-b-8 border-indigo-500 "></div> 
       <p class="mb-9 text-lg lg:text-2xl leading-loose lg:leading-loose text-gray-500">
         These projects have are in development or have been recently pithed to Macon Code. If you are interested in any of these projects and would like to contribute, contact us!
-    </p>
-  </div> -->
-    <!-- <div class="relative z-50 container mx-auto px-4">
+      </p>
+      </div> -->
+      <!-- <div class="relative z-50 container mx-auto px-4">
         <div class="flex flex-wrap -m-6">
             <div class="w-full md:w-1/2 p-6">
                 <div class="h-full md:max-w-lg">
@@ -320,10 +316,10 @@
                 </div>
             </div>
         </div>
-    </div> -->
-
-
-    <div class="px-4 mt-12 md:mt-0 md:w-1/2  cont ">
+      </div> -->
+      
+      
+      <div class="px-4 mt-12 md:mt-0 md:w-1/2 ">
         <div  id="imgsList"   class="flex flex-nowrap -m-4">
             <div class="flex-shrink-0 p-4">
                 <div class="max-w-xl bg-white py-16 px-20 rounded-10">
@@ -335,7 +331,7 @@
                     vehicula dictumst blandit eleifend sapien adipiscing. Cras massa eu faucibus.</p>
                 </div>
             </div>
-
+      
             <div class="flex-shrink-0 p-4">
               <div class="max-w-xl bg-white py-16 px-20 rounded-10">
                 <div class="text-4xl font-bold text-[#df1683] mb-4">02</div>
@@ -367,10 +363,9 @@
                 </div>
             </div>
         </div>
-    </div>
-  </div>
-</section>
-
+      </div>
+      </div>
+      </section>
 <section id="features" class="py-20 bg-white">
   <div class="container px-4 max-w-6xl mx-auto" data-aos="fade-up" data-aos-duration="1000"
   data-aos-delay="100">
@@ -719,7 +714,9 @@
 
 
 <script src="{% static  'js/main.js' %}"></script>
+
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js" integrity="sha256-ivk71nXhz9nsyFDoYoGf2sbjrR9ddh+XDkCcfZxjvcM=" crossorigin="anonymous"></script>
   <script>
     AOS.init({once: true});
 
