--- a/MaconCO/MaconCoders/templates/MaconCoders/index.html
+++ b/MaconCO/MaconCoders/templates/MaconCoders/index.html
@@ -98,7 +98,7 @@
           <div x-data="{ open: false }" class="flex flex-col  p-4 mt-0 mx-9  md:items-center md:justify-between md:flex-row  md:px-6 lg:px-8">
             <div class="flex flex-row  items-center justify-between  ">
               <a href="{% url 'index' %}" class="text-xl font-semibold tracking-widest  uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline inline-flex items-center  ">
-                <img class="h-32 w-28 rounded-lg" src="{% static 'img/4clear.png' %}" alt="">
+                <!-- <img class="h-32 w-28 rounded-lg" src="{% static 'img/4clear.png' %}" alt=""> -->
 
 
 <!--                
