--- a/MaconCO/MaconCoders/templates/MaconCoders/index.html
+++ b/MaconCO/MaconCoders/templates/MaconCoders/index.html
@@ -154,7 +154,7 @@
            
             <h1
             class="max-w-xl uppercase mb-4 text-xl leading-tight md:text-4xl md:leading-tight lg:text-6xl lg:leading-tight font-bold text-white">
-            Help us design for Macon! Test
+            Help us design for Macon!
             </h1>
             <p class="text-xl text-white font-normal leading-relaxed lg:leading-normal lg:text-2xl tracking-wide mt-6 max-w-4xl">
               We are Macon Code, a non-profit organization working on solutions for community problems through the thoughtful use of technology. We beleive in the possibilities of our community, and we strive to develop resources that make Macon better for everyone.
