--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,18 +1,19 @@
 {% load static %}
 
+{% load tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind django</title>
-
+    <title>Macon Code</title>
+    {% tailwind_css %}
    <style>
       [x-cloak] {
           display: none !important;
       }
-
+m
       html {
           scroll-behavior: smooth;
       }
